
SUBDIRS = CommonUtilitiesLib QTFileLib Server.tproj APIModules \
	PlaylistBroadcaster.tproj initscripts Documentation

dist_doc_DATA = ReleaseNotes.txt relayconfig.xml qtusers qtgroups qtaccess

doc_DATA = streamingserver.xml

dist_movies_DATA = \
	sample.mp3 \
	sample_100kbit.mov \
	sample_300kbit.mov \
	sample_50kbit.3gp \
	sample_100kbit.mp4 \
	sample_300kbit.mp4 \
	sample_h264_100kbit.mp4 \
	sample_h264_300kbit.mp4 \
	sample_h264_1mbit.mp4

EXTRA_DIST = streamingserver.xml.in defaultPaths.h
