dist_doc_DATA = \
	3rdPartyAcknowledgements.rtf AboutQTFileTools.html AboutTheSource.html \
	CachingProxyProtocol-README.txt DSS_QT_Logo_License.pdf DevNotes.html \
	FAQ.html License.rtf QTSSAPIDocs.pdf RTSP_Over_HTTP.pdf ReadMe.rtf \
	ReliableRTP_WhitePaper.rtf admin-protocol-README.txt \
	draft-serenyi-avt-rtp-meta-00.txt readme.txt

